# quick-search-beta

./: autostart.wxs  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: websites.json
src/components/: SearchBar.tsx
src/components/ui/: Icons.tsx  SmIcon.tsx
src/helper/: autocompleteHelper.ts  handleGlobalShortcut.ts
src/store/: store.ts
src/types/: website.ts
